# autocoder

./: .gitignore  README.md  agent.py  ai.py  chat.py  db.py  main.py  parser.py  project.py  pyproject.toml  requirements.txt
agent/: code.py  orchestrator.py  qa.py
autocoder/: ai.py  chat.py  db.py  main.py  parser.py  project.py
autocoder/agent/: code.py  orchestrator.py  plan.py  qa.py
autocoder/project/: factory.py  model.py  project.py  python_project.py  utils.py
autocoder/prompts/: planning.py  system.py
prompts/: coding.py  planning.py  qa.py
tests/: test_ai.py
