[tool.poetry]
name = "autocoder"
version = "0.1.0"
description = ""
authors = ["Artem Moskvin <amoskvin@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.5.2"
shellingham = "^1.5.0.post1"
openai = "^0.27.8"
langchain = "^0.0.256"
python-dotenv = "^1.0.0"
wonderwords = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
autocoder = 'autocoder.main:app'
